Install unittest2 for Python 2.6 while testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-install: "python setup.py install"
+install:
+  - "python setup.py install"
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
 # command to run tests
 script: nosetests
