--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  - "3.3"
+  - "3.4"
 # command to install dependencies
 install:
   - "python setup.py install"
+  - pip install mock
+  - pip install pytest
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
 # command to run tests
-script: nosetests
+script: py.test
