--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ install:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
 # command to run tests
 script: py.test
+env: BOTO_CONFIG=/tmp/nowhere
