--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.5"
 # command to install dependencies
 install:
+  - pip install urllib3==1.22
   - "python setup.py install"
   - pip install mock
   - pip install pytest
