--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install urllib3==1.22 requests
   - "python setup.py install"
   - pip install mock
-  - pip install pytest
+  - pip install pytest==3.1.2
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
 # command to run tests
 script: py.test
