--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -r requirements.txt
   - "python setup.py install"
   - pip install mock
-  - pip install pytest==3.2.0 pytest-cov
+  - pip install pytest==3.2.0 pytest-cov==2.6.0
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
   - curl https://deepsource.io/cli | sh
 # command to run tests
