--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -12,3 +12,8 @@ exclude_patterns = [
 name = 'python'
 enabled = true
 runtime_version = '2.x.x'
+
+# Test coverage analyzer
+[[analyzers]]
+name = "test-coverage"
+enabled = true
