--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -13,6 +13,9 @@ name = 'python'
 enabled = true
 runtime_version = '2.x.x'
 
+  [analyzers.meta]
+  max_line_length = 200
+
 # Test coverage analyzer
 [[analyzers]]
 name = "test-coverage"
